# xig_base

./: README.md  format.txt
xig_base/: CMakeLists.txt
xig_base/src/: aig.cpp  aig.h  basic_circuit.cpp  basic_circuit.h  function.cpp  function.h  implementation.cpp  implementation.h  main.cpp  main_xig.cpp  polynom.cpp  polynom.h  validator.cpp  validator.h
